--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -132,7 +132,7 @@
         app:layout_constraintTop_toBottomOf="@id/passwordLayout" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/BackID"
+        android:id="@+id/goBackID"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
