--- a/app/src/main/res/layout/pop_up_dialog2.xml
+++ b/app/src/main/res/layout/pop_up_dialog2.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Lily"
+        android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/RoseTextID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.042"
@@ -44,9 +45,9 @@
 
     <TextView
         android:id="@+id/RoseTextID"
-        android:layout_width="396dp"
-        android:layout_height="wrap_content"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur dictum mi, et interdum elit consectetur id. Quisque eget mattis dolor, at luctus velit. Cras et sem gravida nisl sagittis vehicula. Aenean aliquet, purus vulputate elementum mattis, elit erat maximus erat, convallis rutrum nulla justo id enim. Etiam congue consequat rutrum. Sed vel laoreet est, non pharetra tellus. Aliquam placerat, erat nec ullamcorper placerat, augue enim sagittis diam, eu tincidunt est tellus quis elit. Nam at dapibus velit. Sed erat sem, tempus ac feugiat id, porta sed lorem. Nulla dolor lectus, volutpat vitae commodo consequat, sollicitudin ut libero. Ut sagittis pellentesque viverra. Nulla pellentesque egestas mauris, ut placerat turpis hendrerit nec. Sed ut dolor nibh.  Suspendisse potenti. Maecenas sed tempor est. Phasellus iaculis commodo eros, in lacinia nisi placerat vitae. Quisque id libero velit. Proin ut quam ornare, dapibus libero ac, ultrices turpis. Maecenas consectetur laoreet dui a consectetur. Vivamus a urna lacinia, scelerisque orci sit amet, ornare leo. Maecenas sodales diam quam, in congue risus consequat eget."
+        android:layout_width="372dp"
+        android:layout_height="290dp"
+        android:text="Lilies are perennial flowering plants of the genus Lilium in the family Liliaceae, comprising around 80 to 100 recognized species. They typically grow from bulbs and are known for their large, prominent, and often fragrant flowers that bloom in a wide range of colors including white, yellow, orange, pink, red, and purple. Most species are native to temperate regions of the Northern Hemisphere, particularly in Asia, Europe, and North America. Their leaves are generally narrow, lance-shaped, and grow spirally or in whorls along the stem, varying in size from 2 to 20 cm in length.  The flowers usually consist of six petal-like tepals, often with spots or streaks, and are arranged in a trumpet, bowl, or turban shape. Each flower typically has six stamens with large anthers, and a single prominent pistil. Lilies are known for their symbolic associations with purity and renewal in various cultures and are commonly used in ornamental gardening and floral arrangements."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
