--- a/app/src/main/res/layout/pop_up_dialog6.xml
+++ b/app/src/main/res/layout/pop_up_dialog6.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Peony"
+        android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/RoseTextID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.042"
@@ -44,9 +45,9 @@
 
     <TextView
         android:id="@+id/RoseTextID"
-        android:layout_width="396dp"
-        android:layout_height="wrap_content"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur dictum mi, et interdum elit consectetur id. Quisque eget mattis dolor, at luctus velit. Cras et sem gravida nisl sagittis vehicula. Aenean aliquet, purus vulputate elementum mattis, elit erat maximus erat, convallis rutrum nulla justo id enim. Etiam congue consequat rutrum. Sed vel laoreet est, non pharetra tellus. Aliquam placerat, erat nec ullamcorper placerat, augue enim sagittis diam, eu tincidunt est tellus quis elit. Nam at dapibus velit. Sed erat sem, tempus ac feugiat id, porta sed lorem. Nulla dolor lectus, volutpat vitae commodo consequat, sollicitudin ut libero. Ut sagittis pellentesque viverra. Nulla pellentesque egestas mauris, ut placerat turpis hendrerit nec. Sed ut dolor nibh.  Suspendisse potenti. Maecenas sed tempor est. Phasellus iaculis commodo eros, in lacinia nisi placerat vitae. Quisque id libero velit. Proin ut quam ornare, dapibus libero ac, ultrices turpis. Maecenas consectetur laoreet dui a consectetur. Vivamus a urna lacinia, scelerisque orci sit amet, ornare leo. Maecenas sodales diam quam, in congue risus consequat eget."
+        android:layout_width="372dp"
+        android:layout_height="359dp"
+        android:text="Peonies are perennial flowering plants of the genus Paeonia, the only genus in the family Paeoniaceae, comprising around 30–40 species. They are best known for their large, lush, and often fragrant blooms that come in a wide range of colors, including white, pink, red, and occasionally yellow or purple. Native primarily to Asia, with some species in Europe and western North America, peonies thrive in temperate climates and are widely cultivated as ornamental garden plants. The leaves are compound and deeply lobed, typically arranged alternately on the stem, with a smooth or slightly serrated margin.  Peony flowers can be single, semi-double, or fully double, with a dense layering of petals in cultivated varieties. They bloom in late spring to early summer, with each flower typically lasting about 7 to 10 days. Peonies grow from thick, fleshy root systems and can live for decades when properly cared for. Symbolizing prosperity, honor, and romance, peonies hold cultural significance in Chinese and Japanese traditions and are prized in floral design and wedding arrangements."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
